# page-loader

./: .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pythonCI.yml
page_load/: __init__.py  cli.py  core.py  logging.py
page_load/scripts/: __init__.py  page_loader.py
tests/: conftest.py  github_test.py  mock_test.py  test_dl.py  test_download.py  test_write.py
tests/fixtures/: hexlet-io-courses.html  sharknoise-github-io-pltest.html
