[tool.poetry]
name = "page-loader"
version = "0.2.0"
description = ""
authors = ["sharknoise <sharknoise@gmail.com>"]

packages = [
  { include = "page_load" },
]

[tool.poetry.scripts]
page-loader = "page_load.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
pathlib = "^1.0.1"
isort = "4.3.21"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
mypy = "^0.790"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
