[tool.poetry]
name = "SHARKNOISE_page_loader"
version = "0.6.2"
description = ""
authors = ["sharknoise <sharknoise@gmail.com>"]

packages = [
  { include = "page_load" },
]

[tool.poetry.scripts]
page-loader = "page_load.scripts.page_loader:main"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
progress = "^1.5"

[tool.poetry.dev-dependencies]
isort = "^5.0.0"
wemake-python-styleguide = "^0.15.0"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
mypy = "^0.790"
requests-mock = "^1.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
